# React-Native-Stockfish-Android

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-stockfish-android.podspec  react-native-stockfish-chess-engine.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativestockfishchessengine/: StockfishChessEngineModule.java  StockfishChessEnginePackage.java
android/src/main/java/com/stockfishandroid/: StockfishAndroidModule.java  StockfishAndroidPackage.java
cpp/: react-native-stockfish-android.cpp  react-native-stockfish-android.h
cpp/bridge/: stockfish.cpp
cpp/stockfish/: benchmark.cpp  evaluate.cpp  evaluate.h  lockedstringqueue.cpp  lockedstringqueue.h  misc.cpp  search.cpp  sharedioqueues.h  stockfish.cpp  thread.h  tt.cpp  tune.cpp  uci.cpp  uci.h  ucioption.cpp
cpp/stockfish/nnue/: evaluate_nnue.cpp  nnue_common.h
cpp/stockfish/nnue/layers/: affine_transform.h
cpp/stockfish/src/: evaluate.cpp  evaluate.h
cpp/stockfish/syzygy/: tbprobe.cpp
example/: .eslinrc.json  README.md  app.json  metro.config.js  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/stockfishandroidexample/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/stockfishandroidexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/stockfishandroidexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/StockfishAndroidExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/StockfishAndroidExample.xcodeproj/: project.pbxproj
example/ios/StockfishAndroidExample.xcodeproj/xcshareddata/xcschemes/: StockfishAndroidExample.xcscheme
example/ios/StockfishAndroidExampleTests/: StockfishAndroidExampleTests.m
example/ios/StockfishChessEngineExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/StockfishChessEngineExample.xcodeproj/: project.pbxproj
example/ios/StockfishChessEngineExample.xcodeproj/xcshareddata/xcschemes/: StockfishChessEngineExample.xcscheme
example/ios/StockfishChessEngineExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  stockfish.d.ts
ios/: StockfishAndroid.h  StockfishAndroid.mm  StockfishChessEngine.h  StockfishChessEngine.mm
ios/StockfishAndroid.xcodeproj/: project.pbxproj
ios/StockfishChessEngine.xcodeproj/: project.pbxproj
src/: index.tsx
(+3 files in other folders)
